# TheRock

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD_TOPOLOGY.toml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  RELEASES.md  ROADMAP.md  SUPPORTED_GPUS.md  requirements-external.txt  requirements-test.txt  requirements.txt  version.json
.github/: CODEOWNERS  bump_submodules.yml  dependabot.yml
.github/scripts/: repo-diff.py
.github/workflows/: build_jax_dockerfile.yml  build_linux_jax_wheels.yml  build_linux_packages.yml  build_native_linux_packages.yml  build_portable_linux_artifacts.yml  build_portable_linux_python_packages.yml  build_portable_linux_pytorch_wheels.yml  build_pytorch_docker.yml  build_vllm_docker.yml  build_windows_artifacts.yml  build_windows_packages.yml  build_windows_python_packages.yml  build_windows_pytorch_wheels.yml  bump_submodule.yml  bump_submodules.yml  ci.yml  ci_asan.yml  ci_linux.yml  ci_nightly.yml  ci_windows.yml  copy_release.yml  install_native_linux_packages.yml  multi_arch_build_portable_linux.yml  multi_arch_ci.yml  new_ci_linux.yml  new_ci_weekly.yml  new_setup.yml  pre-commit.yml  publish_dockerfile.yml  release_branch_creation.yml  release_native_linux_packages.yml  release_portable_linux_packages.yml  release_portable_linux_pytorch_wheels.yml  release_windows_packages.yml  release_windows_pytorch_wheels.yml  rock_branching.yml  setup.yml  submodule_bump.yml  test_artifacts.yml  test_component.yml  (+13 more)
base/: CMakeLists.txt  artifact.toml  post_hook_amdsmi.cmake  therock.cmake
build_tools/: analyze_build_times.py  analyze_memory_logs.py  artifact_manager.py  build_python_packages.py  build_vllm_docker.py  buildctl.py  configure_stage.py  export_source_archive.py  fetch_artifacts.py  fetch_jax_wheels.py  fetch_sources.py  fetch_wheels.py  fileset_tool.py  generate_therock_manifest.py  install_packages.py  install_rocm_from_artifacts.py  install_rocm_tar.py  linux_portable_build.py  mapping_built_jax_wheels.py  memory_monitor.py  patch_third_party_source.py  print_driver_gpu_info.py  pytorch_docker_build_push.py  report_build_time_template.html  setup_venv.py  submodule_helper.sh  topology_to_cmake.py  uninstall_packages.py  update_rocm_tag_wheels.py
build_tools/_therock_utils/: artifact_backend.py  artifacts.py  build_topology.py  py_packaging.py
build_tools/detail/: linux_portable_build_in_container.sh
build_tools/github_actions/: amdgpu_family_matrix.py  build_configure.py  cleanup_processes.ps1  configure_amdgpu_matrix.py  configure_ci.py  configure_multi_arch_ci.py  determine_version.py  fetch_package_targets.py  fetch_test_configurations.py  github_actions_utils.py  new_amdgpu_family_matrix.py  post_build_upload.py  repo-diff.py  report_template.html  summarize_test_pytorch_workflow.py  test_reporting_script.py  upload_build_artifacts.py  upload_test_report_script.py  upload_test_reports.py  write_torch_versions.py
build_tools/packaging/: download_prerelease_packages.py  how_to_do_release.md  promote_from_rc_to_final.py  requirements.txt  upload_release_packages.py
build_tools/release_automations/: create_release_branch.py
build_tools/tests/: artifact_backend_test.py  build_topology_test.py  conftest.py  fetch_artifacts_test.py  test_artifact_backend.py  test_build_topology.py  test_memory_monitor.py
cmake/: therock_amdgpu_targets.cmake  therock_artifacts.cmake  therock_compiler_config.cmake  therock_directories.cmake  therock_features.cmake  therock_subproject.cmake  therock_subproject_dep_provider.cmake
cmake/finders/: FindBLAS.cmake  FindFFTW.cmake  FindFFTWf.cmake  FindLAPACK.cmake
comm-libs/: artifact-rccl.toml  therock.cmake
compiler/: CMakeLists.txt  artifact-amd-llvm.toml  pre_hook_amd-llvm.cmake  therock.cmake
core/: CMakeLists.txt  artifact-amdsmi.toml  artifact-core-hip.toml  artifact-core-hiptests.toml  artifact-core-hiptests_win.toml  artifact-core-ocl.toml  therock.cmake
dctools/: CMakeLists.txt  artifact-rdc.toml
debug-tools/: CMakeLists.txt  amd-dbgapi.cmake  artifact-amd-dbgapi.toml  artifact-rocr-debug-agent-tests.toml  artifact-rocr-debug-agent.toml  rocr-debug-agent-tests.cmake  rocr-debug-agent.cmake
dockerfiles/: build_manylinux_x86_64.Dockerfile  no_rocm_image_ubuntu24_04.Dockerfile  pytorch_base.Dockerfile
docs/: environment_setup_guide.md
docs/development/: README.md  artifacts.md  build_system.md  dependencies.md  development_guide.md  github_actions_debugging.md  installing_artifacts.md  new_component_onboarding.md  style_guide.md  test_harness.md  therock_test_harness.md  windows_support.md
docs/packaging/: native_packaging.md  python_packaging.md  versioning.md
docs/rfcs/: README.md  RFC0003-Build-Tree-Normalization.md  RFC0004-Fusilli-IREE-Kernel-Provider-hipDNN.md  RFC0004-Test-Orchestrator.md  RFC0006-libhipcxx-ROCm-Core-Inclusion.md  RFC0007-rdc-therock-integration.md  RFC0008-Multi-Arch-Packaging.md  RFC0008-OS-Packaging-Requirements.md
examples/: CMakeLists.txt  clean_configure_test_project.cmake
examples/cpp-sdk-user/: CMakeLists.txt
experimental/rockbuilder/: README.md  (+2 more)
math-libs/: CMakeLists.txt  artifact-hiptensor.toml  artifact-libhipcxx.toml  artifact-rocwmma.toml  therock.cmake
math-libs/BLAS/: CMakeLists.txt  README.md  artifact-blas.toml  pre_hook_hipSPARSE.cmake  pre_hook_rocSPARSE.cmake  therock.cmake
math-libs/support/: therock.cmake
ml-libs/: CMakeLists.txt  artifact-hiptensor.toml  artifact-miopen-plugin.toml  post_hook_MIOpen_plugin.cmake  therock.cmake
profiler/: CMakeLists.txt  artifact-aqlprofile.toml  artifact-rdc.toml  artifact-rocprofiler-compute.toml  artifact-rocprofiler-sdk.toml  artifact-rocprofiler-systems.toml  therock.cmake
release-automations/: create_release_branch.py  rock-tagging.py
systems-tools/: CMakeLists.txt  artifact-rdc.toml  validate_rdc_library.py  validate_rdc_library.sh
test_rocm_packages/: CMakeLists.txt  QUICKSTART.md  README.md  TEST_SUITE_SUMMARY.md  THEROCK_BUILD_TIME_CMAKE_CONFIGS.md  THEROCK_PACKAGES_AND_CMAKE_CONFIGS.md  run_tests.sh  test_main.cpp  test_report.txt.in
(+295 files in other folders)
